--- a/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
@@ -30,84 +30,6 @@
 </div>
 
 <div class="card-deck">
-    <div class="card" style="width: 20rem;">
-        <img class="card-img-top" src="~/Content/SlidePrueba.jpg" alt="Card image cap">
-        <div class="card-block">
-            <h4 class="card-title">Evento1</h4>
-            <p class="card-text">Información de evento.</p>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <i class="fa fa-calendar fa-fw"></i>
-                Fecha
-            </li>
-            <li class="list-group-item">
-                <i class="fa fa-clock-o fa-fw"></i>
-                Hora
-            </li>
-
-            <li class="list-group-item">
-                <i class="fa fa-map-marker fa-fw"></i>
-                Ubicación
-            </li>
-        </ul>
-        <div class="card-block">
-            <a href="#" class="card-link">Ver evento</a>
-        </div>
-    </div>
-    <div class="card" style="width: 20rem;">
-        <img class="card-img-top" src="~/Content/SlidePrueba.jpg" alt="Card image cap">
-        <div class="card-block">
-            <h4 class="card-title">Evento2</h4>
-            <p class="card-text">Información de evento.</p>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <i class="fa fa-calendar fa-fw"></i>
-                Fecha
-            </li>
-            <li class="list-group-item">
-                <i class="fa fa-clock-o fa-fw"></i>
-                Hora
-            </li>
-
-            <li class="list-group-item">
-                <i class="fa fa-map-marker fa-fw"></i>
-                Ubicación
-            </li>
-        </ul>
-        <div class="card-block">
-            <a href="#" class="card-link">Ver evento</a>
-        </div>
-    </div>
-    <div class="card" style="width: 20rem;">
-        <img class="card-img-top" src="~/Content/SlidePrueba.jpg" alt="Card image cap">
-        <div class="card-block">
-            <h4 class="card-title">Evento3</h4>
-            <p class="card-text">Información de evento.</p>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <i class="fa fa-calendar fa-fw"></i>
-                Fecha
-            </li>
-            <li class="list-group-item">
-                <i class="fa fa-clock-o fa-fw"></i>
-                Hora
-            </li>
-
-            <li class="list-group-item">
-                <i class="fa fa-map-marker fa-fw"></i>
-                Ubicación
-            </li>
-        </ul>
-        <div class="card-block">
-            <a href="#" class="card-link">Ver evento</a>
-        </div>
-    </div>
-</div>
-
-<div class="card-deck">
     <div class="card card-cascade narrower">
 
         <!--Card image-->
@@ -125,25 +47,24 @@
             <h4 class="card-title">Evento 1</h4>
             <!--Text-->
             <p class="card-text">Información de evento.</p>
-
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    <i class="fa fa-calendar fa-fw"></i>
-                    Fecha
-                </li>
-                <li class="list-group-item">
-                    <i class="fa fa-clock-o fa-fw"></i>
-                    Hora
-                </li>
-
-                <li class="list-group-item">
-                    <i class="fa fa-map-marker fa-fw"></i>
-                    Ubicación
-                </li>
-            </ul>
-
-            <a class="btn btn-primary">Ver evento</a>
+            <p class="card-text"><small class="text-muted">Creado por Usuario</small></p>
         </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                <i class="fa fa-calendar fa-fw"></i>
+                Fecha
+            </li>
+            <li class="list-group-item">
+                <i class="fa fa-clock-o fa-fw"></i>
+                Hora
+            </li>
+
+            <li class="list-group-item">
+                <i class="fa fa-map-marker fa-fw"></i>
+                Ubicación
+            </li>
+        </ul>
+        <a class="btn btn-primary">Ver evento</a>
         <!--/.Card content-->
 
     </div>
@@ -164,25 +85,24 @@
             <h4 class="card-title">Evento 2</h4>
             <!--Text-->
             <p class="card-text">Información de evento.</p>
-
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    <i class="fa fa-calendar fa-fw"></i>
-                    Fecha
-                </li>
-                <li class="list-group-item">
-                    <i class="fa fa-clock-o fa-fw"></i>
-                    Hora
-                </li>
-
-                <li class="list-group-item">
-                    <i class="fa fa-map-marker fa-fw"></i>
-                    Ubicación
-                </li>
-            </ul>
-
-            <a class="btn btn-primary">Ver evento</a>
+            <p class="card-text"><small class="text-muted">Creado por Usuario</small></p>
         </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                <i class="fa fa-calendar fa-fw"></i>
+                Fecha
+            </li>
+            <li class="list-group-item">
+                <i class="fa fa-clock-o fa-fw"></i>
+                Hora
+            </li>
+
+            <li class="list-group-item">
+                <i class="fa fa-map-marker fa-fw"></i>
+                Ubicación
+            </li>
+        </ul>
+        <a class="btn btn-primary">Ver evento</a>
         <!--/.Card content-->
 
     </div>
@@ -203,26 +123,26 @@
             <h4 class="card-title">Evento 3</h4>
             <!--Text-->
             <p class="card-text">Información de evento.</p>
-
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    <i class="fa fa-calendar fa-fw"></i>
-                    Fecha
-                </li>
-                <li class="list-group-item">
-                    <i class="fa fa-clock-o fa-fw"></i>
-                    Hora
-                </li>
-
-                <li class="list-group-item">
-                    <i class="fa fa-map-marker fa-fw"></i>
-                    Ubicación
-                </li>
-            </ul>
-
-            <a class="btn btn-primary">Ver evento</a>
+            <p class="card-text"><small class="text-muted">Creado por Usuario</small></p>
         </div>
+
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                <i class="fa fa-calendar fa-fw"></i>
+                Fecha
+            </li>
+            <li class="list-group-item">
+                <i class="fa fa-clock-o fa-fw"></i>
+                Hora
+            </li>
+
+            <li class="list-group-item">
+                <i class="fa fa-map-marker fa-fw"></i>
+                Ubicación
+            </li>
+        </ul>
+        <a class="btn btn-primary">Ver evento</a>
         <!--/.Card content-->
 
     </div>
-</div>
+</div> 
