--- a/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
@@ -82,11 +82,17 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
+
+
+<div class="md-form">
+    <input type="text" id="form1" class="form-control">
+    <label for="form1" class="">Example label</label>
+</div>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
