--- a/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
@@ -15,37 +15,31 @@
         <h4>Events</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.NombreEvento, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            
+            <div class="md-form">
                 @Html.EditorFor(model => model.NombreEvento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.LabelFor(model => model.NombreEvento)
                 @Html.ValidationMessageFor(model => model.NombreEvento, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.lat, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="md-form">
                 @Html.EditorFor(model => model.lat, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.LabelFor(model => model.lat)
                 @Html.ValidationMessageFor(model => model.lat, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.lng, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            </div>
+
+            <div class="md-form">
                 @Html.EditorFor(model => model.lng, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.LabelFor(model => model.lng)
                 @Html.ValidationMessageFor(model => model.lng, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="md-form">
                 @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.LabelFor(model => model.Descripcion)
                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
             </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.FechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -87,12 +81,6 @@
         </div>
     </div>
 }
-
-
-<div class="md-form">
-    <input type="text" id="form1" class="form-control">
-    <label for="form1" class="">Example label</label>
-</div>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
