--- a/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
@@ -1,18 +1,16 @@
 ﻿@model RepositorioClases.Events
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Eventos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Create</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Events</h4>
+        <h4>Nuevo Evento</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             
@@ -23,23 +21,16 @@
             </div>
 
             <div class="md-form">
-                @Html.EditorFor(model => model.lat, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.LabelFor(model => model.lat)
-                @Html.ValidationMessageFor(model => model.lat, "", new { @class = "text-danger" })
-
-            </div>
-
-            <div class="md-form">
-                @Html.EditorFor(model => model.lng, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.LabelFor(model => model.lng)
-                @Html.ValidationMessageFor(model => model.lng, "", new { @class = "text-danger" })
-            </div>
-
-            <div class="md-form">
                 @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.LabelFor(model => model.Descripcion)
                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
             </div>
+
+        <div class="md-form">
+            @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.Direccion)
+            @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.FechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -52,26 +43,85 @@
         <div class="form-group">
             @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-
-                @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control", type = "date" } })
                 @Html.ValidationMessageFor(model => model.FechaFin, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IdUser, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.IdUser, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IdUser, "", new { @class = "text-danger" })
-            </div>
+            @Html.EnumDropDownListFor(model => model.IdCategoria, htmlAttributes: new { @class = "form-control"})
+            @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Estado, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
+                @Html.CheckBoxFor(model => model.Destacado, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.LabelFor(model => model.Destacado, htmlAttributes: new { @class = "control-label col-md-2" })
             </div>
+        </div>
+
+        <div id="map" style="width:100%;height:600px;"></div>
+
+        <script>
+            // Note: This example requires that you consent to location sharing when
+            // prompted by your browser. If you see the error "The Geolocation service
+            // failed.", it means you probably did not give permission for the browser to
+            // locate you.
+
+            function initMap() {
+
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    center: { lat: -30.944932, lng: -61.562566 },
+                    zoom: 17
+                });
+
+                var infoWindow = new google.maps.InfoWindow({ map: map });
+
+
+                var myMarker = new google.maps.Marker({
+                    position: new google.maps.LatLng(-30.944932, -61.562566),
+                    draggable: true
+                });
+
+                map.setCenter(myMarker.position);
+                myMarker.setMap(map);
+
+                //-----------------------------------------------------------------------
+
+
+                google.maps.event.addListener(myMarker, 'dragend', function (evt) {
+                    $('#lat').val(evt.latLng.lat().toFixed(3));
+                    $('#lng').val(evt.latLng.lng().toFixed(3));
+                });
+
+                google.maps.event.addListener(myMarker, 'dragstart', function (evt) {
+                    document.getElementById('lat').innerHTML = 'Currently dragging marker...';
+                });
+
+                //-----------------------------------------------------------------------
+            }
+            function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                infoWindow.setPosition(pos);
+                infoWindow.setContent(browserHasGeolocation ?
+                    'Error: The Geolocation service failed.' :
+                    'Error: Your browser doesn\'t support geolocation.');
+            }
+
+        </script>
+
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPHbsGCp8vpDA1vMKAFWsU0Odc8Mz5SAA&callback=initMap" async defer></script>
+
+        <div class="md-form col-md-2">
+            @Html.EditorFor(model => model.lat, new { htmlAttributes = new { @class = "form-control", @id = "lat", @readonly = "readonly", @visible =false } })
+            @Html.LabelFor(model => model.lat)
+            @Html.ValidationMessageFor(model => model.lat, "", new { @class = "text-danger" })
+
+        </div>
+
+        <div class="md-form col-md-2">
+            @Html.EditorFor(model => model.lng, new { htmlAttributes = new { @class = "form-control", @id = "lng", @readonly = "readonly" } })
+            @Html.LabelFor(model => model.lng)
+            @Html.ValidationMessageFor(model => model.lng, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group">
