Alta y Edicion de eventos terminada. Falta Cambiar date-pickers para que se pueda seleccionar una hora ademas de la fecha

--- a/GlobalEvents/GlobalEvents/Views/Events/Index.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Index.cshtml
@@ -2,3 +2,7 @@
 @{
     ViewBag.Title = "Eventos";
 }
+
+
+<input type="button" class="btn btn-info" value="Nuevo Evento" onclick="location.href = '/Events/Create';">
+
