--- a/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
@@ -116,15 +116,13 @@
 
 
         <div class="md-form col-md-2">
-            @Html.EditorFor(model => model.lat, new { htmlAttributes = new { @class = "form-control", @id = "lat", @readonly = "readonly", @visible = false } })
-            @Html.LabelFor(model => model.lat)
+            @Html.EditorFor(model => model.lat, new { htmlAttributes = new { @class = "form-control", @id = "lat", @readonly = "readonly", @hidden = true } })
             @Html.ValidationMessageFor(model => model.lat, "", new { @class = "text-danger" })
-
         </div>
+        <h3>Arrastre el marcador hacia la ubicación del evento</h3>
 
         <div class="md-form col-md-2">
-            @Html.EditorFor(model => model.lng, new { htmlAttributes = new { @class = "form-control", @id = "lng", @readonly = "readonly" } })
-            @Html.LabelFor(model => model.lng)
+            @Html.EditorFor(model => model.lng, new { htmlAttributes = new { @class = "form-control", @id = "lng", @readonly = "readonly", @hidden = true } })
             @Html.ValidationMessageFor(model => model.lng, "", new { @class = "text-danger" })
         </div>
 
