--- a/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Events", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -125,12 +125,18 @@
             @Html.ValidationMessageFor(model => model.lng, "", new { @class = "text-danger" })
         </div>
 
+        <label for="file">Upload Image:</label>
+        <input type="file" name="file" id="file" /><br><br>
+        @*<input type="submit" value="Upload Image" />*@
+        <br><br>
+        @ViewBag.Message
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-primary" />
         </div>
+    </div>
     </div>
 }
 
