Modificar imagen en la edicion de eventos

--- a/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
@@ -6,12 +6,12 @@
 }
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Events", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Events</h4>
+        <h3>Events</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -63,6 +63,7 @@
             </div>
         </div>
 
+        <h4>Arrastre el marcador hacia la ubicación del evento</h4>
 
         @* ------------------------------------------------------------------------------------------------------------ *@
 
@@ -119,13 +120,19 @@
             @Html.EditorFor(model => model.lat, new { htmlAttributes = new { @class = "form-control", @id = "lat", @readonly = "readonly", @hidden = true } })
             @Html.ValidationMessageFor(model => model.lat, "", new { @class = "text-danger" })
         </div>
-        <h3>Arrastre el marcador hacia la ubicación del evento</h3>
 
         <div class="md-form col-md-2">
             @Html.EditorFor(model => model.lng, new { htmlAttributes = new { @class = "form-control", @id = "lng", @readonly = "readonly", @hidden = true } })
             @Html.ValidationMessageFor(model => model.lng, "", new { @class = "text-danger" })
         </div>
 
+        <img src="@Model.RutaImagen" class="mx-auto d-block" alt="Responsive Image" />
+
+        <br />
+        <br />
+
+        <label for="file">Modificar imagen:</label>
+        <input type="file" name="file" id="file" /><br><br>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
