--- a/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
@@ -10,7 +10,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Nuevo Evento</h4>
+        <h3>Nuevo Evento</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             
@@ -60,6 +60,8 @@
             </div>
         </div>
 
+        <h4>Arrastre el marcador hacia la ubicación del evento</h4>
+
         <div id="map" style="width:100%;height:600px;"></div>
 
         <script>
@@ -97,10 +99,6 @@
                     $('#lng').val(evt.latLng.lng().toFixed(5));
                 });
 
-                google.maps.event.addListener(myMarker, 'dragstart', function (evt) {
-                    document.getElementById('lat').innerHTML = 'Currently dragging marker...';
-                });
-
                 //-----------------------------------------------------------------------
             }
             function handleLocationError(browserHasGeolocation, infoWindow, pos) {
@@ -118,18 +116,15 @@
             @Html.EditorFor(model => model.lat, new { htmlAttributes = new { @class = "form-control", @id = "lat", @readonly = "readonly", @hidden =true } })
             @Html.ValidationMessageFor(model => model.lat, "", new { @class = "text-danger" })
         </div>
-        <h3>Arrastre el marcador hacia la ubicación del evento</h3>
+
 
         <div class="md-form col-md-2">
             @Html.EditorFor(model => model.lng, new { htmlAttributes = new { @class = "form-control", @id = "lng", @readonly = "readonly", @hidden = true } })
             @Html.ValidationMessageFor(model => model.lng, "", new { @class = "text-danger" })
         </div>
 
-        <label for="file">Upload Image:</label>
+        <label for="file">Subir imagen:</label>
         <input type="file" name="file" id="file" /><br><br>
-        @*<input type="submit" value="Upload Image" />*@
-        <br><br>
-        @ViewBag.Message
 
 
     <div class="form-group">
