--- a/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
@@ -5,79 +5,68 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>Events</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.NombreEvento)
-        </dt>
+<div class="card">
+    <div class="card-header">@Html.DisplayFor(model => model.NombreEvento)</div>
+    <img class="card-img-top" src="@Html.DisplayFor(model => model.RutaImagen)" alt="Card image cap" />
 
-        <dd>
-            @Html.DisplayFor(model => model.NombreEvento)
-        </dd>
+    <div class="card-block">
+        
+        <p class="card-text">@Html.DisplayFor(model => model.Descripcion) </p>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.lat)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.lat)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.lng)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.lng)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaInicio)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FechaInicio)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaFin)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FechaFin)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IdUser)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IdUser)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-
-    </dl>
+        <div id="map" style="width:100%;height:300px;"></div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+
+@* ------------------------------------------------------------------------------------------------------------ *@
+
+
+
+
+<script>
+            // Note: This example requires that you consent to location sharing when
+            // prompted by your browser. If you see the error "The Geolocation service
+            // failed.", it means you probably did not give permission for the browser to
+            // locate you.
+
+            function initMap() {
+
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    center: { lat:@Model.lat, lng: @Model.lng },
+                    zoom: 15
+                });
+
+                var infoWindow = new google.maps.InfoWindow({ map: map });
+
+
+                var myMarker = new google.maps.Marker({
+                    position: new google.maps.LatLng(@Model.lat, @Model.lng),
+                    draggable: false
+                });
+
+
+                map.setCenter(myMarker.position);
+                myMarker.setMap(map);
+
+                //--------------------------------------------------------------------
+                google.maps.event.addListener(myMarker, 'dragend', function (evt) {
+                    $('#lat').val(evt.latLng.lat().toFixed(3));
+                    $('#lng').val(evt.latLng.lng().toFixed(3));
+                });
+
+                google.maps.event.addListener(myMarker, 'dragstart', function (evt) {
+                    document.getElementById('lat').innerHTML = 'Currently dragging marker...';
+                });
+
+                //-----------------------------------------------------------------------
+            }
+
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPHbsGCp8vpDA1vMKAFWsU0Odc8Mz5SAA&callback=initMap" async defer></script>
+
+
+@* ------------------------------------------------------------------------------------------------------------------------------------------------------ *@
+
+
