--- a/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
@@ -13,18 +13,18 @@
         <h3>Nuevo Evento</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            
-            <div class="md-form">
-                @Html.EditorFor(model => model.NombreEvento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.LabelFor(model => model.NombreEvento)
-                @Html.ValidationMessageFor(model => model.NombreEvento, "", new { @class = "text-danger" })
-            </div>
 
-            <div class="md-form">
-                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.LabelFor(model => model.Descripcion)
-                @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
-            </div>
+        <div class="md-form">
+            @Html.EditorFor(model => model.NombreEvento, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.NombreEvento)
+            @Html.ValidationMessageFor(model => model.NombreEvento, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="md-form">
+            @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.Descripcion)
+            @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+        </div>
 
         <div class="md-form">
             @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
@@ -41,6 +41,11 @@
         </div>
 
         <div class="form-group">
+            <h6> Hora Inicio:</h6>
+            <input class="text-box single-line col-2" id="HoraInicio" name="HoraInicio" type="time" value="12:00" />
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control", type = "date" } })
@@ -49,7 +54,12 @@
         </div>
 
         <div class="form-group">
-            @Html.EnumDropDownListFor(model => model.IdCategoria, htmlAttributes: new { @class = "form-control"})
+            <h6> Hora Fin:</h6>
+            <input class="text-box single-line col-2" id="HoraFin" name="HoraFin" type="time" value="12:00" />
+        </div>
+
+        <div class="form-group">
+            @Html.EnumDropDownListFor(model => model.IdCategoria, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
         </div>
 
@@ -74,7 +84,7 @@
 
                 var map = new google.maps.Map(document.getElementById('map'), {
                     center: { lat: -30.94520, lng: -61.56056 },
-                    zoom: 15
+                    zoom: 14
                 });
 
                 var infoWindow = new google.maps.InfoWindow({ map: map });
@@ -113,7 +123,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPHbsGCp8vpDA1vMKAFWsU0Odc8Mz5SAA&callback=initMap" async defer></script>
 
         <div class="md-form col-md-2">
-            @Html.EditorFor(model => model.lat, new { htmlAttributes = new { @class = "form-control", @id = "lat", @readonly = "readonly", @hidden =true } })
+            @Html.EditorFor(model => model.lat, new { htmlAttributes = new { @class = "form-control", @id = "lat", @readonly = "readonly", @hidden = true } })
             @Html.ValidationMessageFor(model => model.lat, "", new { @class = "text-danger" })
         </div>
 
@@ -127,12 +137,14 @@
         <input type="file" name="file" id="file" /><br><br>
 
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-primary" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
         </div>
+
     </div>
-    </div>
+
 }
 
 <div>
