--- a/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
@@ -43,6 +43,11 @@
         </div>
 
         <div class="form-group">
+            <h6> Hora Inicio:</h6>
+            <input class="text-box single-line col-2" id="HoraInicio" name="HoraInicio" type="time" value="@Model.HoraInicio" />
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control", type = "date" } })
@@ -50,6 +55,10 @@
             </div>
         </div>
 
+        <div class="form-group">
+            <h6> Hora Fin:</h6>
+            <input class="text-box single-line col-2" id="HoraFin" name="HoraFin" type="time" value="@Model.HoraFin" />
+        </div>
 
         <div class="form-group">
             @Html.EnumDropDownListFor(model => model.IdCategoria, htmlAttributes: new { @class = "form-control" })
@@ -80,7 +89,7 @@
 
                 var map = new google.maps.Map(document.getElementById('map'), {
                     center: { lat: $('#lat').val(), lng: $('#lng').val() },
-                    zoom: 15
+                    zoom: 14
                 });
 
                 var infoWindow = new google.maps.InfoWindow({ map: map });
@@ -126,7 +135,7 @@
             @Html.ValidationMessageFor(model => model.lng, "", new { @class = "text-danger" })
         </div>
 
-        <img src="@Model.RutaImagen" class="mx-auto d-block" alt="Responsive Image" />
+        <img src="@Model.RutaImagen" class="mx-auto d-block" alt="" />
 
         <br />
         <br />
@@ -136,7 +145,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Editar Evento" class="btn btn-default" />
             </div>
         </div>
     </div>
