Re-diseño, cambio de framework de frontend, etc. Versiòn preliminar.

--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -3,117 +3,136 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="~/Content/materialize.min.css" media="screen,projection" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <script src="~/Scripts/jquery-3.1.1.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
-    <script src="~/Scripts/bootstrap.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/mdb.js"></script>
 
-    <!-- Bootstrap core CSS -->
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="~/Content/mdb.min.css" rel="stylesheet">
-    <!-- Your custom styles (optional) -->
-    <link href="~/Content/style.css" rel="stylesheet">
-
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8" />
+    
     <title>@ViewBag.Title - GlobalEvents</title>
 
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
 
-        <a class="navbar-brand" href="@Url.Action("Index", "Home")">
-            <img src="~/Content/Imagenes/method-draw-image.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-            lobalEvents
-        </a>
+    <div class="navbar-fixed">
+        <nav class="nav-extended #757575 grey darken-1">
+            <div class="nav-wrapper">
+                <!-- Logo -->
+                <a href="#!" class="brand-logo center">GlobalEvents</a>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item @Html.IsSelected(controllers: "Events", cssClass: "active")">
-                        <!--<a class="nav-link" href="#">Eventos</a>-->
-                        @Html.ActionLink("Eventos", "Index", "Events", new { area = "" }, new { @class = "nav-link" })
-                    </li>
-                    <li class="nav-item @Html.IsSelected(controllers: "Users", cssClass: "active")">
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+
+                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                    <li class="@Html.IsSelected(controllers: "Home", actions: "Index", cssClass: "active")">@Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, null)</li>
+                    <li class="@Html.IsSelected(controllers: "Events", cssClass: "active")">@Html.ActionLink("Eventos", "Index", "Events", new { area = "" }, null)</li>
+                </ul>
+
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li>
                         @if (WebSecurity.IsAuthenticated)
                         {
-                            @Html.ActionLink("Usuarios", "Index", "Users", new { area = "" }, new { @class = "nav-link" })
+                            @Html.ActionLink("Administración", "Index", "Users", new { area = "" }, null)
+                        }
+                    </li>
+                    <li>
+                        @if (WebSecurity.IsAuthenticated)
+                        {
+                            @Html.ActionLink("Desconectarse", "Logout", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, null)
                         }
                         else
                         {
-                            <a class="nav-link disabled" href="#">Usuarios</a>
-                        }
+                            @Html.ActionLink("Iniciar sesión", "Login", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, null)
+                       }
                     </li>
                 </ul>
-                <ul class="nav justify-content-end">
-                    <li class="nav-item">
+                <!-- Esto es para cuando se hace muy chica la pantalla-->
+                <ul class="side-nav" id="mobile-demo">
+                    <li>@Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Eventos", "Index", "Events", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li class="@Html.IsSelected(controllers: "Users", cssClass: "active")">
                         @if (WebSecurity.IsAuthenticated)
                         {
-                            @Html.ActionLink("Desconectarse", "Logout", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, new { @class = "nav-link" })
+                            @Html.ActionLink("Administración", "Index", "Users", new { area = "" }, null)
+                        }
+                    </li>
+                    <li class="@Html.IsSelected(controllers: "Home", actions: "Login", cssClass: "active")">
+                        @if (WebSecurity.IsAuthenticated)
+                        {
+                            @Html.ActionLink("Desconectarse", "Logout", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, null)
                         }
                         else
                         {
-                            @Html.ActionLink("Iniciar sesión", "Login", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, new { @class = "nav-link" })
+                            @Html.ActionLink("Iniciar sesión", "Login", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, null)
                         }
                     </li>
                 </ul>
             </div>
-    </nav>
+            <!-- Barra debajo para categorías-->
+            @if (Html.IsSelected(controllers: "Events"))
+            {
+                <div class="nav-content">
+                    <ul class="tabs tabs-transparent">
 
-    <!--Ver barra de categorías si esta en el controlador eventos-->
-    @if (Html.IsSelected(controllers: "Events"))
-    {
-        <ul class="nav nav-pills nav-fill" style="background-color: #f5f3f3;">
-            <li class="nav-item">
-                <a class="nav-link active" href="#"><i class="fa fa-star-o fa-fw"></i>Destacados</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-music fa-fw"></i>Música</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-beer fa-fw"></i>Fiestas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-picture-o fa-fw"></i>Artes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-cutlery fa-fw"></i>Gastronomía</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-graduation-cap fa-fw"></i>Clases</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-futbol-o fa-fw"></i>Deportes y bienestar</a>
-            </li>
-        </ul>
-    }
-
-
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - GlobalEvents.</p>
-        </footer>
+                        <li class="tab">
+                            <a class="active" href="#"><i class="fa fa-star-o fa-fw"></i>Destacados</a>
+                        </li>
+                        <li class="tab">
+                            <a class="" href="#"><i class="fa fa-music fa-fw"></i>Música</a>
+                        </li>
+                        <li class="tab">
+                            <a class="" href="#"><i class="fa fa-beer fa-fw"></i>Fiestas</a>
+                        </li>
+                        <li class="tab">
+                            <a class="" href="#"><i class="fa fa-picture-o fa-fw"></i>Artes</a>
+                        </li>
+                        <li class="tab">
+                            <a class="" href="#"><i class="fa fa-cutlery fa-fw"></i>Gastronomía</a>
+                        </li>
+                        <li class="tab">
+                            <a class="" href="#"><i class="fa fa-graduation-cap fa-fw"></i>Clases</a>
+                        </li>
+                        <li class="tab">
+                            <a class="" href="#"><i class="fa fa-futbol-o fa-fw"></i>Deportes</a>
+                        </li>
+                    </ul>
+                    <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal" href="~/Events/Create">
+                        <i class="material-icons">add</i>
+                    </a>
+                </div>
+            }
+        </nav>
     </div>
 
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="~/Scripts/jquery-3.1.1.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="~/Scripts/tether.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="~/Scripts/mdb.min.js"></script>
-    @RenderSection("scripts", required: false)
+    <script>$(".button-collapse").sideNav();</script>
+
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - GlobalEvents.</p>
+            </footer>
+        </div>
+
+        <!-- SCRIPTS -->
+        <!-- JQuery -->
+        <script type="text/javascript" src="~/Scripts/jquery-3.1.1.js"></script>
+        <!-- Bootstrap tooltips -->
+        <script type="text/javascript" src="~/Scripts/materialize.js"></script>
+        <!-- Bootstrap core JavaScript -->
+        <script type="text/javascript" src="~/Scripts/materialize.min.js"></script>
+        @RenderSection("scripts", required: false)
 </body>
 </html>
 
