--- a/GlobalEvents/GlobalEvents/Views/Events/Index.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Index.cshtml
@@ -3,36 +3,88 @@
     ViewBag.Title = "Eventos";
 }
 
-<h2>Usuarios</h2>
+<br />
+<br />
 
-<p>
-    @Html.ActionLink("Crear nuevo usuario", "Create")
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col s12 cards-container">
 
-<input type="button" class="btn btn-info" value="Nuevo Evento" onclick="location.href = '/Events/Create';">
-
-
-<div class="card-columns">
-
-    @foreach (var item in Model)
-    {
-        <div class="card">
-            @if (item.RutaImagen != null)
+            @foreach (var item in Model)
             {
-                <img class="card-img-top img-fluid" src="@Html.DisplayFor(modelItem => item.RutaImagen)" alt="Card image cap">
+                if (item.Destacado)
+                {
+                    if (item.RutaImagen != null)
+                    {
+                        <div class="card blue-grey darken-1">
+                            <div class="card-image">
+                                <img src="@Html.DisplayFor(modelItem => item.RutaImagen)">
+                                <span class="card-title">@Html.DisplayFor(modelItem => item.NombreEvento)</span>
+                                <a class="btn-floating halfway-fab waves-effect waves-light red" href="~/Events/Details/@item.Id"><i class="material-icons">more_vert</i></a>
+                            </div>
+                            <div class="card-content">
+                                <p>@Html.DisplayFor(modelItem => item.Descripcion)</p>
+                                <div class="chip">
+                                    <img src="images/yuna.jpg" alt="Contact Person">
+                                    Jane Doe
+                                </div>
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                                <span class="card-title">@Html.DisplayFor(modelItem => item.NombreEvento)</span>
+                                <p>@Html.DisplayFor(modelItem => item.Descripcion)</p>
+                                <div class="chip">
+                                    <img src="https://cdn1.iconfinder.com/data/icons/web-essentials-circle-style/48/user-512.png" alt="Contact Person">
+                                    Jane Doe
+                                </div>
+                            </div>
+                            <div class="card-action">
+                                <a href="~/Events/Details/@item.Id">Ver evento</a>
+                            </div>
+                        </div>
+                    }
+                }
+                else
+                {
+                    if (item.RutaImagen != null)
+                    {
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="@Html.DisplayFor(modelItem => item.RutaImagen)">
+                                <span class="card-title">@Html.DisplayFor(modelItem => item.NombreEvento)</span>
+                                <a class="btn-floating halfway-fab waves-effect waves-light red" href="~/Events/Details/@item.Id"><i class="material-icons">more_vert</i></a>
+                            </div>
+                            <div class="card-content">
+                                <p>@Html.DisplayFor(modelItem => item.Descripcion)</p>
+                                <div class="chip">
+                                    <img src="images/yuna.jpg" alt="Contact Person">
+                                    Jane Doe
+                                </div>
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="card">
+                            <div class="card-content grey-text">
+                                <span class="card-title">@Html.DisplayFor(modelItem => item.NombreEvento)</span>
+                                <p>@Html.DisplayFor(modelItem => item.Descripcion)</p>
+                                <div class="chip">
+                                    <img src="images/yuna.jpg" alt="Contact Person">
+                                    Jane Doe
+                                </div>
+                            </div>
+                            <div class="card-action">
+                                <a href="~/Events/Details/@item.Id">Ver evento</a>
+                            </div>
+                        </div>
+                    }
+                }
             }
-            else
-            {
-
-            }
-            <div class="card-block">
-                <h4 class="card-title">@Html.DisplayFor(modelItem => item.NombreEvento)</h4>
-                <p class="card-text">@Html.DisplayFor(modelItem => item.Descripcion)</p>
-            </div>
-            <div class="text-center">
-                <a class="btn btn-primary" href="~/Events/Details/@item.Id">Ver evento</a>
-            </div>
-            </div>
-    }
-
+        </div>
+    </div>
 </div>
