--- a/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
@@ -2,32 +2,97 @@
     ViewBag.Title = "Home Page";
 }
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-            <img class="figure-img img-fluid rounded" src="~/Content/SlidePrueba.jpg" alt="Evento principal 1">
-        </div>
-        <div class="carousel-item">
-            <img class="figure-img img-fluid rounded" src="~/Content/SlidePrueba.jpg" alt="Evento principal 2">
-        </div>
-        <div class="carousel-item">
-            <img class="figure-img img-fluid rounded" src="~/Content/SlidePrueba.jpg" alt="Evento principal 3">
+
+    <!-- Page Layout here -->
+    <div class="row">
+        <div class="col s0 m0 l2">&nbsp</div>
+
+        <!-- Cards container -->
+        <div class="col s12 m12 l8">
+            <h4>Events</h4>
+            <div class="row">
+                <!-- Col: Card 1 -->
+                <div class="col s12 m6 l4">
+                    <!-- Card 1 -->
+                    <div class="card">
+                        <div class="card-content white-text">
+                            <div class="card__date">
+                                <span class="card__date__day">23</span>
+                                <span class="card__date__month">Mai</span>
+                            </div>
+                            <div class="card__meta">
+                                <a href="#"><i class="small material-icons">room</i>Web Design</a>
+                                <time>17th March</time>
+                            </div>
+                            <span class="card-title grey-text text-darken-4">Savoy swing up</span>
+
+                            <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia...lacus eleifend lacinia... go!</p>
+                            <span class="blue-text text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
+                            <h5 class="red-text"><i class="fa fa-futbol-o"></i> Deporte</h5>
+                        </div>
+                        <div class="card-action">
+                            <a href="#"><i class="material-icons">&nbsp;language</i>VISIT WEB</a>
+                            <a href="#" class="card-action-right"><i class="material-icons">&nbsp;room</i>FIND</a>
+                        </div>
+                    </div>
+                    <!-- End of card -->
+                </div>
+                <!-- End of col -->
+                <!-- Col: Card 1 -->
+                <div class="col s12 m6 l4">
+                    <!-- Card 1 -->
+                    <div class="card">
+                        <div class="card-content white-text">
+                            <div class="card__date">
+                                <span class="card__date__day">23</span>
+                                <span class="card__date__month">Mai</span>
+                            </div>
+                            <div class="card__meta">
+                                <a href="#"><i class="small material-icons">room</i>Web Design</a>
+                                <time>17th March</time>
+                            </div>
+                            <span class="card-title grey-text text-darken-4">Savoy swing up</span>
+
+                            <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia...lacus eleifend lacinia... go!</p>
+                            <span class="blue-text text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
+                        </div>
+                        <div class="card-action">
+                            <a href="#"><i class="material-icons">&nbsp;language</i>VISIT WEB</a>
+                            <a href="#" class="card-action-right"><i class="material-icons">&nbsp;room</i>FIND</a>
+                        </div>
+                    </div>
+                    <!-- End of card -->
+                </div>
+                <!-- Col: Card 1 -->
+                <div class="col s12 m6 l4">
+                    <!-- Card 1 -->
+                    <div class="card">
+                        <div class="card-content white-text">
+                            <div class="card__date">
+                                <span class="card__date__day">23</span>
+                                <span class="card__date__month">Mai</span>
+                            </div>
+                            <div class="card__meta">
+                                <a href="#"><i class="small material-icons">room</i>Web Design</a>
+                                <time>17th March</time>
+                            </div>
+                            <span class="card-title grey-text text-darken-4">Savoy swing up</span>
+
+                            <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia...lacus eleifend lacinia... go!</p>
+                            <span class="blue-text text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
+                        </div>
+                        <div class="card-action">
+                            <a href="#"><i class="material-icons">&nbsp;language</i>VISIT WEB</a>
+                            <a href="#" class="card-action-right"><i class="material-icons">&nbsp;room</i>FIND</a>
+                        </div>
+                    </div>
+                    <!-- End of card -->
+                </div>
+
+            </div>
         </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+
 
 <div class="card-deck">
     <div class="card card-cascade narrower">
